# biocypher

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .style.yapf  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  MANIFEST.in  NOTICE  README.md  adapter.html  adapters.html  api.html  contents.html  environment.yaml  genindex.html  get-involved.html  index.html  installation.html  mkdocs.nav.yml  mkdocs.yml  neo4j.html  objects.inv  ontology.graphml  paper.md  py-modindex.html  pyproject.toml  quickstart.html  r-bioc.html  reference.html  release-please-config.json  requirements.txt  schema_config.yaml  search.html  (+16 more)
.docs/: conf.py  get-involved.md  r-bioc.md  tutorial.md
0.10.0/: 404.html  index.html  sitemap.xml
0.10.1/: 404.html  index.html  sitemap.xml
0.11.0/: 404.html  index.html  sitemap.xml
0.12.0/: 404.html  index.html  sitemap.xml
0.12.1/: 404.html  index.html  sitemap.xml
0.12.2/: 404.html  index.html  sitemap.xml
0.12.3/: 404.html  index.html  llms.txt  sitemap.xml
0.12.4/: 404.html  index.html  sitemap.xml
0.12.5/: 404.html  index.html  sitemap.xml
0.13.0/: 404.html  index.html  objects.inv  sitemap.xml
0.13.1/: 404.html  index.html  llms-adapters.txt  sitemap.xml
0.9.1/: 404.html  index.html  objects.inv  sitemap.xml
0.9.4/: 404.html  index.html  sitemap.xml
0.9.5/: 404.html  index.html  sitemap.xml
0.9.6/: 404.html  index.html  sitemap.xml
0.9.7/: 404.html  index.html  sitemap.xml
_docs/: index.rst  standalone-docker-image.md
_docs_archive/: .buildinfo  CNAME  contents.html  genindex.html  get-involved.html  installation.html  standalone-docker-image.html  tutorial-adapter.html
_sources/: adapter.md.txt  adapters.md.txt  api.rst.txt  contents.rst.txt  get-involved.md.txt  index.rst.txt  installation.md.txt  neo4j.md.txt  quickstart.md.txt  r-bioc.md.txt  reference.rst.txt  submodule.rst.txt  tutorial-adapter.md.txt  tutorial-ontology.md.txt  tutorial.md.txt  tutorial_intro.md.txt  usage.md.txt  user-experiences.md.txt
biocypher/: __init__.py  _agent.py  _biolink.py  _check.py  _connect.py  _core.py  _create.py  _deduplicate.py  _deduplicate_disk_index.py  _driver.py  _driver_base.py  _get.py  _graph.py  _logger.py  _mapping.py  _meta.py  _metadata.py  _misc.py  _ontology.py  _pandas.py  _translate.py  _utils.py  _workflow.py  _write.py  biolink-model.py  check.py  create.py  dictionary.py  driver.py  driver_b.py  logger.py  translate.py  utils.py  write.py
community/: index.html
config/: biocypher-biolink-model.yaml  db_config.yaml  module_config.yaml  schema_config.yaml
docs/: .conf.py.swp  adapter.md  adapters.md  api.md  api.rst  build-pole-standalone-image.md  conf.py  contents.rst  get-involved.md  index.md  index.rst  installation.md  llms-adapters.txt  llms-example-adapter.txt  llms.md  neo4j.md  quickstart.md  standalone-docker-image.md  submodule.rst  tutorial-adapter.md  tutorial-ontology.md  tutorial.md  tutorial_1.md  user-experiences.md
examples/: agent_integration_example.py  unified_graph_example.py
installation/: index.html
modules/: biocypher.BioCypher.html  biocypher._connect._Neo4jDriver.html  biocypher._connect.get_driver.html  biocypher._create.BioCypherEdge.html  biocypher._create.BioCypherNode.html  biocypher._create.BioCypherRelAsNode.html  biocypher._get.APIRequest.html  biocypher._get.Downloader.html  biocypher._get.FileDownload.html  biocypher._get.Resource.html  biocypher._logger.get_logger.html  biocypher._mapping.OntologyMapping.html  biocypher._misc.create_tree_visualisation.html  biocypher._misc.ensure_iterable.html  biocypher._misc.from_pascal.html  biocypher._misc.pascalcase_to_sentencecase.html  biocypher._misc.sentencecase_to_pascalcase.html  biocypher._misc.sentencecase_to_snakecase.html  biocypher._misc.snakecase_to_sentencecase.html  biocypher._misc.to_list.html  biocypher._ontology.Ontology.html  biocypher._ontology.OntologyAdapter.html  biocypher._pandas.Pandas.html  biocypher._translate.Translator.html  biocypher._write._ArangoDBBatchWriter.html  biocypher._write._BatchWriter.html  biocypher._write._Neo4jBatchWriter.html  biocypher._write._PostgreSQLBatchWriter.html  biocypher._write.get_writer.html  biocypher.output.connect._get_connector.get_connector.html  biocypher.output.connect._neo4j_driver._Neo4jDriver.html  biocypher.output.connect._neo4j_driver.get_driver.html  biocypher.output.in_memory._pandas.Pandas.html  biocypher.output.in_memory._pandas.PandasKG.html  biocypher.output.write._batch_writer._BatchWriter.html  biocypher.output.write._get_writer.get_writer.html  biocypher.output.write._writer._Writer.html  biocypher.output.write.graph._arangodb._ArangoDBBatchWriter.html  biocypher.output.write.graph._neo4j._Neo4jBatchWriter.html  biocypher.output.write.graph._networkx._NetworkXWriter.html  (+10 more)
notebooks/: pandas_tutorial.html  pandas_tutorial.ipynb
output/: RDF.html  arangodb.html  csv.html  index.html  neo4j.html  networkx.html  owl.html  postgres.html  rdf.html  sqlite.html
reference/: index.html
schema/: schema01.json
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
test/: conftest.py  go.owl  mondo.obo  profile_performance.py  rdflib_playground.py  so.obo  test_agent.py  test_check.py  test_config.py  test_core.py  test_create.py  test_deduplicate.py  test_driver.py  test_get.py  test_graph.py  test_graphql_schema.py  test_headless.py  test_integration.py  test_mapping.py  test_misc.py  test_ontology.py  test_pandas.py  test_translate.py  test_translate_nodes.py  test_workflow.py  test_write.py  test_write_arango.py  test_write_neo4j.py  test_write_postgres.py
tutorial/: 01__basic_import copy.py  01__basic_import.py  01__basic_import_pandas.py  01_basic_config.yaml  01_basic_import.py  01_biocypher_config.yaml  01_schema_config.yaml  02__merge.py  02__merge_pandas.py  02_biocypher_config.yaml  02_merge.py  02_schema_config.yaml  03__implicit_subclass.py  03__implicit_subclass_pandas.py  03_biocypher_config.yaml  03_implicit_subclass.py  03_schema_config.yaml  (+28 more)
(+1278 files in other folders)
